# tree-sitter-flatbuffers

./: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
bindings/c/: tree-sitter-flatbuffers.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_flatbuffers/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterFlatbuffersTests/: TreeSitterFlatbuffersTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: attributes.txt  comments.txt  enums.txt  file_attributes.txt  includes.txt  json.txt  literals.txt  namespaces.txt  rpcs.txt  schemas.txt  structs.txt  tables.txt  unions.txt
test/highlight/: struct.fbs  table.fbs
