[package]
name = "tree-sitter-flatbuffers"
description = "FlatBuffers grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "flatbuffers"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/smpanaro/tree-sitter-flatbuffers"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[build-dependencies]
cc = "1.0"
